sonarqube/sonarqube-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
      version: v1
  template:
    metadata:
      labels:
        app: sonarqube
        version: v1
    spec:
      containers:
      - name: sonarqube
        image: sonarqube
        ports:
        - containerPort: 9000
          name: http-9000
