sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  selector:
    app: sonarqube
    version: v1
  ports:
  - name: http-9000
    port: 9000
    targetPort: 9000
